Edited wiki page through web user interface.

--- a/wiki/as3xdrivelibCompileIntructions.wiki
+++ b/wiki/as3xdrivelibCompileIntructions.wiki
@@ -1,16 +1,16 @@
 #summary Using the Xdrive Library in your project
 #labels Phase-Deploy
 
-== Dependencies ==
+= Dependencies =
 
 The project has the following dependencies:
 
 * http://code.google.com/p/as3corelib 
 
 
-== Getting the code ==
+= Getting the code =
 
-= Using Subversion =
+== Using Subversion == 
 
 *Check out the code into Flex builder using Subversion  
 *Change the Flex Project Nature to Flex Project Library
@@ -21,7 +21,7 @@ The project has the following dependencies:
 *Create a new Flex Library Project in Flex Builder 3 named as3xdrivelib
 *Place the folders/files from the uncompressed zip into the new projet
 
-= Building the Xdrive Library SWC =
+== Building the Xdrive Library SWC == 
 
 *Add the corelib SWC file to the libs folder
 *Add the "com" directory to the Flex Library Build Path in the Project Properties
@@ -29,12 +29,12 @@ The project has the following dependencies:
 *Build the project
 *Place the compiled as3xdrivelib SWC file into your current project libs folder
 
-= Linking in the SWC =
+== Linking in the SWC == 
 
 *Download the current version of the as3xdrivelib zip file from the featured downloads
 *Place the compiled as3xdrivelib SWC file into your current project libs directory
 
-= Linking in the ActionScript Source =
+== Linking in the ActionScript Source == 
 
 *Add the corelib SWC file to the libs folder
 *Add the "com" directory to your current project
